--- a/projects/Amlogic/linux/linux.aarch64.conf
+++ b/projects/Amlogic/linux/linux.aarch64.conf
@@ -2364,7 +2364,7 @@ CONFIG_REGULATOR_S2MPS11=y
 # CONFIG_REGULATOR_TPS65132 is not set
 # CONFIG_REGULATOR_TPS6524X is not set
 # CONFIG_REGULATOR_VCTRL is not set
-CONFIG_CEC_CORE=y
+CONFIG_CEC_CORE=m
 CONFIG_CEC_NOTIFIER=y
 CONFIG_RC_CORE=m
 CONFIG_RC_MAP=m
@@ -2400,7 +2400,7 @@ CONFIG_IR_MESON=m
 # CONFIG_IR_SERIAL is not set
 # CONFIG_IR_SIR is not set
 CONFIG_RC_XBOX_DVD=m
-CONFIG_MEDIA_SUPPORT=y
+CONFIG_MEDIA_SUPPORT=m
 
 #
 # Multimedia core support
@@ -2411,15 +2411,16 @@ CONFIG_MEDIA_DIGITAL_TV_SUPPORT=y
 # CONFIG_MEDIA_RADIO_SUPPORT is not set
 # CONFIG_MEDIA_SDR_SUPPORT is not set
 CONFIG_MEDIA_CEC_SUPPORT=y
+CONFIG_MEDIA_CEC_RC=y
 CONFIG_MEDIA_CONTROLLER=y
 # CONFIG_MEDIA_CONTROLLER_DVB is not set
-CONFIG_VIDEO_DEV=y
+CONFIG_VIDEO_DEV=m
 CONFIG_VIDEO_V4L2_SUBDEV_API=y
-CONFIG_VIDEO_V4L2=y
+CONFIG_VIDEO_V4L2=m
 # CONFIG_VIDEO_ADV_DEBUG is not set
 # CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
-CONFIG_V4L2_MEM2MEM_DEV=y
-CONFIG_DVB_CORE=y
+CONFIG_V4L2_MEM2MEM_DEV=m
+CONFIG_DVB_CORE=m
 # CONFIG_DVB_MMAP is not set
 # CONFIG_DVB_NET is not set
 CONFIG_DVB_MAX_ADAPTERS=16
@@ -2433,11 +2434,11 @@ CONFIG_DVB_MAX_ADAPTERS=16
 # CONFIG_MEDIA_USB_SUPPORT is not set
 # CONFIG_V4L_PLATFORM_DRIVERS is not set
 CONFIG_V4L_MEM2MEM_DRIVERS=y
-# CONFIG_VIDEO_MEM2MEM_DEINTERLACE is not set
+CONFIG_VIDEO_MEM2MEM_DEINTERLACE=m
 # CONFIG_VIDEO_SH_VEU is not set
-CONFIG_VIDEO_MESON_VDEC=y
+CONFIG_VIDEO_MESON_VDEC=m
 # CONFIG_V4L_TEST_DRIVERS is not set
-# CONFIG_DVB_PLATFORM_DRIVERS is not set
+CONFIG_DVB_PLATFORM_DRIVERS=y
 CONFIG_CEC_PLATFORM_DRIVERS=y
 # CONFIG_VIDEO_CROS_EC_CEC is not set
 CONFIG_VIDEO_MESON_AO_CEC=m
@@ -2448,10 +2449,10 @@ CONFIG_VIDEO_MESON_AO_CEC=m
 #
 # CONFIG_SMS_SDIO_DRV is not set
 # CONFIG_CYPRESS_FIRMWARE is not set
-CONFIG_VIDEOBUF2_CORE=y
-CONFIG_VIDEOBUF2_V4L2=y
-CONFIG_VIDEOBUF2_MEMOPS=y
-CONFIG_VIDEOBUF2_DMA_CONTIG=y
+CONFIG_VIDEOBUF2_CORE=m
+CONFIG_VIDEOBUF2_V4L2=m
+CONFIG_VIDEOBUF2_MEMOPS=m
+CONFIG_VIDEOBUF2_DMA_CONTIG=m
 
 #
 # Media ancillary drivers (tuners, sensors, i2c, spi, frontends)
@@ -2512,17 +2513,17 @@ CONFIG_VIDEO_IR_I2C=m
 # Media SPI Adapters
 #
 CONFIG_CXD2880_SPI_DRV=m
-CONFIG_MEDIA_TUNER=y
-CONFIG_MEDIA_TUNER_SIMPLE=y
-CONFIG_MEDIA_TUNER_TDA8290=y
-CONFIG_MEDIA_TUNER_TDA827X=y
-CONFIG_MEDIA_TUNER_TDA18271=y
-CONFIG_MEDIA_TUNER_TDA9887=y
-CONFIG_MEDIA_TUNER_MT20XX=y
-CONFIG_MEDIA_TUNER_XC2028=y
-CONFIG_MEDIA_TUNER_XC5000=y
-CONFIG_MEDIA_TUNER_XC4000=y
-CONFIG_MEDIA_TUNER_MC44S803=y
+CONFIG_MEDIA_TUNER=m
+CONFIG_MEDIA_TUNER_SIMPLE=m
+CONFIG_MEDIA_TUNER_TDA8290=m
+CONFIG_MEDIA_TUNER_TDA827X=m
+CONFIG_MEDIA_TUNER_TDA18271=m
+CONFIG_MEDIA_TUNER_TDA9887=m
+CONFIG_MEDIA_TUNER_MT20XX=m
+CONFIG_MEDIA_TUNER_XC2028=m
+CONFIG_MEDIA_TUNER_XC5000=m
+CONFIG_MEDIA_TUNER_XC4000=m
+CONFIG_MEDIA_TUNER_MC44S803=m
 
 #
 # Multistandard (satellite) frontends
@@ -2661,19 +2662,19 @@ CONFIG_DRM_PANEL_BRIDGE=y
 # CONFIG_DRM_TOSHIBA_TC358767 is not set
 # CONFIG_DRM_TI_TFP410 is not set
 # CONFIG_DRM_TI_SN65DSI86 is not set
-CONFIG_DRM_I2C_ADV7511=m
+# CONFIG_DRM_I2C_ADV7511 is not set
 # CONFIG_DRM_I2C_ADV7511_AUDIO is not set
-CONFIG_DRM_I2C_ADV7533=y
-CONFIG_DRM_I2C_ADV7511_CEC=y
-CONFIG_DRM_DW_HDMI=y
+# CONFIG_DRM_I2C_ADV7533 is not set
+# CONFIG_DRM_I2C_ADV7511_CEC is not set
+CONFIG_DRM_DW_HDMI=m
 # CONFIG_DRM_DW_HDMI_AHB_AUDIO is not set
-CONFIG_DRM_DW_HDMI_I2S_AUDIO=y
-CONFIG_DRM_DW_HDMI_CEC=y
+CONFIG_DRM_DW_HDMI_I2S_AUDIO=m
+CONFIG_DRM_DW_HDMI_CEC=m
 # CONFIG_DRM_ARCPGU is not set
 # CONFIG_DRM_HISI_KIRIN is not set
 # CONFIG_DRM_MXSFB is not set
 CONFIG_DRM_MESON=y
-CONFIG_DRM_MESON_DW_HDMI=y
+CONFIG_DRM_MESON_DW_HDMI=m
 # CONFIG_DRM_TINYDRM is not set
 # CONFIG_DRM_PL111 is not set
 CONFIG_DRM_LIMA=y
