--- a/projects/Amlogic/packages/aml_autoscript/config/boot.ini
+++ b/projects/Amlogic/packages/aml_autoscript/config/boot.ini
@@ -14,4 +14,4 @@ fatload mmc ${devno}:1 ${dtb_loadaddr} ${dtb_name}
 fdt addr ${dtb_loadaddr}
 
 # boot
-booti ${loadaddr} - ${dtb_loadaddr}
+booti ${k_addr} - ${dtb_loadaddr}
