--- a/projects/Amlogic/filesystem/usr/lib/systemd/system/serial-console.service
+++ b/projects/Amlogic/filesystem/usr/lib/systemd/system/serial-console.service
@@ -1,21 +1,17 @@
 [Unit]
 Description=Debug Shell on /dev/ttyAML0
+DefaultDependencies=no
 ConditionKernelCommandLine=console=ttyAML0,115200n8
-ConditionPathExists=/dev/ttyAML0
-Requires=dev-ttyAML0.device
-After=dev-ttyAML0.device 
 
 [Service]
-Environment=TTY=AML0
 WorkingDirectory=/storage
+Environment="ENV=/etc/profile"
 ExecStartPre=/bin/sh -c 'echo -en "\033[?25h"'
-ExecStart=/bin/sh -c 'clear; lsb_release; . /etc/profile; exec /bin/sh'
+ExecStart=/bin/sh
 Restart=always
 RestartSec=0
 StandardInput=tty
 TTYPath=/dev/ttyAML0
-TTYReset=no
-TTYVHangup=yes
 KillMode=process
 IgnoreSIGPIPE=no
 # bash ignores SIGTERM
