--- a/packages/sysutils/cpumac/system.d/cpumac@eth0.service
+++ b/packages/sysutils/cpumac/system.d/cpumac@eth0.service
@@ -9,9 +9,9 @@ After=cpumac.service
 [Service]
 Type=oneshot
 EnvironmentFile=/run/libreelec/cpumac-%i
-ExecStart=/usr/sbin/ip link set dev %i down
-ExecStart=/usr/sbin/ip link set dev %i address $MAC
-ExecStart=/usr/sbin/ip link set dev %i up
+ExecStart=-/usr/sbin/ip link set dev %i down
+ExecStart=-/usr/sbin/ip link set dev %i address $MAC
+ExecStart=-/usr/sbin/ip link set dev %i up
 
 [Install]
 WantedBy=multi-user.target
