--- a/projects/Amlogic/linux/linux.aarch64.conf
+++ b/projects/Amlogic/linux/linux.aarch64.conf
@@ -2614,6 +2614,11 @@ CONFIG_VIDEO_MESON_G12A_AO_CEC=m
 # CONFIG_CEC_GPIO is not set
 
 #
+# Meson dvb drivers
+#
+CONFIG_MESON_DVB=m
+
+#
 # Supported MMC/SDIO adapters
 #
 # CONFIG_SMS_SDIO_DRV is not set
